Updated notes. Moved all the style information into mailmypdf.css. Removed break inside expected delivery date message. Fixed some additional whitespace issues.

--- a/static/css/mailmypdf.css
+++ b/static/css/mailmypdf.css
@@ -1,59 +1,70 @@
-.container {
-  padding-right: 2px;
-  padding-left: 2px;
-  margin-right: auto;
-  margin-left: auto;
+.dropzoneContent
+{
+  float: none;
+  margin: 0 auto;
 }
-.col-xs-1,
-.col-sm-1,
-.col-md-1,
-.col-lg-1,
-.col-xs-2,
-.col-sm-2,
-.col-md-2,
-.col-lg-2,
-.col-xs-3,
-.col-sm-3,
-.col-md-3,
-.col-lg-3,
-.col-xs-4,
-.col-sm-4,
-.col-md-4,
-.col-lg-4,
-.col-xs-5,
-.col-sm-5,
-.col-md-5,
-.col-lg-5,
-.col-xs-6,
-.col-sm-6,
-.col-md-6,
-.col-lg-6,
-.col-xs-7,
-.col-sm-7,
-.col-md-7,
-.col-lg-7,
-.col-xs-8,
-.col-sm-8,
-.col-md-8,
-.col-lg-8,
-.col-xs-9,
-.col-sm-9,
-.col-md-9,
-.col-lg-9,
-.col-xs-10,
-.col-sm-10,
-.col-md-10,
-.col-lg-10,
-.col-xs-11,
-.col-sm-11,
-.col-md-11,
-.col-lg-11,
-.col-xs-12,
-.col-sm-12,
-.col-md-12,
-.col-lg-12 {
-  position: relative;
-  min-height: 1px;
-  padding-right: 2px;
-  padding-left: 2px;
+
+.bfh-countries
+{
+  display: none !important;
+  background-color: red;
+}
+
+.bfh-states
+{
+  width: 33% !important;
+}
+
+.cityInput
+{
+  width: 33% !important;
+}
+
+.zipInput
+{
+  width: 32% !important;
+}
+
+.address2
+{
+  float: right !important;
+}
+
+.srcEmail
+{
+  float: right !important;
+}
+
+#content
+{
+  float: none;
+  margin: 0 auto;
+}
+
+#title
+{
+  padding-bottom: 0px;
+  line-height: 12px;
+}
+
+#subtitle
+{
+  style padding-top: 5px;
+}
+
+#MailMyPDFButton
+{
+  padding: 10px 28px;
+  display: none;
+}
+
+#MailMyPDFButtonClickable
+{
+  padding: 10px 28px;
+}
+
+#email
+{
+  font-size: 11px;
+  text-align: center;
 }
